chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6838,6 +6838,15 @@
   timeWait: 102 mins
   timeBuild: 34 mins
   timeTotal: 136 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705608870
+  taskId: 58196675
+  timeCreate: Thu Jan 18 20:14:30 2024
+  timeStart: Thu Jan 18 22:44:17 2024
+  timeFinish: Fri Jan 19 00:01:56 2024
+  timeWait: 149 mins
+  timeBuild: 77 mins
+  timeTotal: 227 mins
 - name: devspaces-operator-bundle
   tag: 3.11-184
   taskId: 58197731
@@ -6847,3 +6856,129 @@
   timeWait: 131 mins
   timeBuild: 5 mins
   timeTotal: 137 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705617508
+  taskId: 58202714
+  timeCreate: Thu Jan 18 22:38:29 2024
+  timeStart: Fri Jan 19 02:12:49 2024
+  timeFinish: Fri Jan 19 03:37:56 2024
+  timeWait: 214 mins
+  timeBuild: 85 mins
+  timeTotal: 299 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705623274
+  taskId: 58204649
+  timeCreate: Fri Jan 19 00:14:35 2024
+  timeStart: Fri Jan 19 04:01:14 2024
+  timeFinish: Fri Jan 19 06:25:07 2024
+  timeWait: 226 mins
+  timeBuild: 143 mins
+  timeTotal: 370 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705633413
+  taskId: 58207896
+  timeCreate: Fri Jan 19 03:03:34 2024
+  timeStart: Fri Jan 19 04:41:16 2024
+  timeFinish: Fri Jan 19 06:10:23 2024
+  timeWait: 97 mins
+  timeBuild: 89 mins
+  timeTotal: 186 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705645082
+  taskId: 58211550
+  timeCreate: Fri Jan 19 06:18:03 2024
+  timeStart: Fri Jan 19 08:50:01 2024
+  timeFinish: Fri Jan 19 10:10:26 2024
+  timeWait: 151 mins
+  timeBuild: 80 mins
+  timeTotal: 232 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705645728
+  taskId: 58211648
+  timeCreate: Fri Jan 19 06:28:49 2024
+  timeStart: Fri Jan 19 09:01:37 2024
+  timeFinish: Fri Jan 19 10:40:04 2024
+  timeWait: 152 mins
+  timeBuild: 98 mins
+  timeTotal: 251 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705645907
+  taskId: 58211702
+  timeCreate: Fri Jan 19 06:31:47 2024
+  timeStart: Fri Jan 19 09:03:12 2024
+  timeFinish: Fri Jan 19 10:28:55 2024
+  timeWait: 151 mins
+  timeBuild: 85 mins
+  timeTotal: 237 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705651012
+  taskId: 58213686
+  timeCreate: Fri Jan 19 07:56:52 2024
+  timeStart: Fri Jan 19 10:01:40 2024
+  timeFinish: Fri Jan 19 11:20:48 2024
+  timeWait: 124 mins
+  timeBuild: 79 mins
+  timeTotal: 203 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705655653
+  taskId: 58215312
+  timeCreate: Fri Jan 19 09:14:13 2024
+  timeStart: Fri Jan 19 11:06:46 2024
+  timeFinish: Fri Jan 19 12:41:53 2024
+  timeWait: 112 mins
+  timeBuild: 95 mins
+  timeTotal: 207 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705655658
+  taskId: 58215315
+  timeCreate: Fri Jan 19 09:14:19 2024
+  timeStart: Fri Jan 19 11:06:49 2024
+  timeFinish: Fri Jan 19 12:25:39 2024
+  timeWait: 112 mins
+  timeBuild: 78 mins
+  timeTotal: 191 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705656130
+  taskId: 58215659
+  timeCreate: Fri Jan 19 09:22:10 2024
+  timeStart: Fri Jan 19 11:18:44 2024
+  timeFinish: Fri Jan 19 12:33:33 2024
+  timeWait: 116 mins
+  timeBuild: 74 mins
+  timeTotal: 191 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705656135
+  taskId: 58215661
+  timeCreate: Fri Jan 19 09:22:15 2024
+  timeStart: Fri Jan 19 11:18:45 2024
+  timeFinish: Fri Jan 19 12:37:04 2024
+  timeWait: 116 mins
+  timeBuild: 78 mins
+  timeTotal: 194 mins
+- name: devspaces-operator
+  tag: 3.11-23
+  taskId: 58215950
+  timeCreate: Fri Jan 19 09:51:23 2024
+  timeStart: Fri Jan 19 11:53:02 2024
+  timeFinish: Fri Jan 19 12:18:30 2024
+  timeWait: 121 mins
+  timeBuild: 25 mins
+  timeTotal: 147 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705658834
+  taskId: 58216289
+  timeCreate: Fri Jan 19 10:07:14 2024
+  timeStart: Fri Jan 19 11:56:13 2024
+  timeFinish: Fri Jan 19 13:05:50 2024
+  timeWait: 108 mins
+  timeBuild: 69 mins
+  timeTotal: 178 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-185
+  taskId: 58218992
+  timeCreate: Fri Jan 19 12:35:07 2024
+  timeStart: Fri Jan 19 12:53:54 2024
+  timeFinish: Fri Jan 19 12:58:26 2024
+  timeWait: 18 mins
+  timeBuild: 4 mins
+  timeTotal: 23 mins
