--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -8755,3 +8755,21 @@
   timeWait: 27 mins
   timeBuild: 8 mins
   timeTotal: 36 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-59
+  taskId: 58246811
+  timeCreate: Sat Jan 20 22:23:40 2024
+  timeStart: Sat Jan 20 22:24:16 2024
+  timeFinish: Sat Jan 20 22:38:46 2024
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 15 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-118
+  taskId: 58246893
+  timeCreate: Sat Jan 20 22:45:38 2024
+  timeStart: Sat Jan 20 22:45:43 2024
+  timeFinish: Sat Jan 20 22:50:06 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
