--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -8998,3 +8998,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-63
+  taskId: 58327451
+  timeCreate: Tue Jan 23 17:23:44 2024
+  timeStart: Tue Jan 23 17:23:59 2024
+  timeFinish: Tue Jan 23 17:37:30 2024
+  timeWait: 0 mins
+  timeBuild: 13 mins
+  timeTotal: 13 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-128
+  taskId: 58327934
+  timeCreate: Tue Jan 23 17:45:20 2024
+  timeStart: Tue Jan 23 17:45:24 2024
+  timeFinish: Tue Jan 23 17:49:15 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
