chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6965,6 +6965,15 @@
   timeBuild: 25 mins
   timeTotal: 147 mins
 - name: devspaces-udi-rhel8
+  tag: 3.11-14.1705658611
+  taskId: 58216280
+  timeCreate: Fri Jan 19 05:03:31 2024
+  timeStart: Fri Jan 19 06:55:26 2024
+  timeFinish: Fri Jan 19 08:19:29 2024
+  timeWait: 111 mins
+  timeBuild: 84 mins
+  timeTotal: 195 mins
+- name: devspaces-udi-rhel8
   tag: 3.11-14.1705658834
   taskId: 58216289
   timeCreate: Fri Jan 19 10:07:14 2024
@@ -6973,6 +6982,15 @@
   timeWait: 108 mins
   timeBuild: 69 mins
   timeTotal: 178 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705663167
+  taskId: 58217625
+  timeCreate: Fri Jan 19 06:19:27 2024
+  timeStart: Fri Jan 19 07:35:55 2024
+  timeFinish: Fri Jan 19 08:46:42 2024
+  timeWait: 76 mins
+  timeBuild: 70 mins
+  timeTotal: 147 mins
 - name: devspaces-operator-bundle
   tag: 3.11-185
   taskId: 58218992
@@ -6982,3 +7000,507 @@
   timeWait: 18 mins
   timeBuild: 4 mins
   timeTotal: 23 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705667729
+  taskId: 58218998
+  timeCreate: Fri Jan 19 07:35:29 2024
+  timeStart: Fri Jan 19 07:53:55 2024
+  timeFinish: Fri Jan 19 09:07:27 2024
+  timeWait: 18 mins
+  timeBuild: 73 mins
+  timeTotal: 91 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705667845
+  taskId: 58219087
+  timeCreate: Fri Jan 19 07:37:25 2024
+  timeStart: Fri Jan 19 07:55:29 2024
+  timeFinish: Fri Jan 19 09:05:25 2024
+  timeWait: 18 mins
+  timeBuild: 69 mins
+  timeTotal: 88 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705673454
+  taskId: 58221791
+  timeCreate: Fri Jan 19 09:10:54 2024
+  timeStart: Fri Jan 19 10:45:40 2024
+  timeFinish: Fri Jan 19 12:08:03 2024
+  timeWait: 94 mins
+  timeBuild: 82 mins
+  timeTotal: 177 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705678344
+  taskId: 58224336
+  timeCreate: Fri Jan 19 10:32:24 2024
+  timeStart: Fri Jan 19 12:19:47 2024
+  timeFinish: Fri Jan 19 13:38:04 2024
+  timeWait: 107 mins
+  timeBuild: 78 mins
+  timeTotal: 185 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705678349
+  taskId: 58224342
+  timeCreate: Fri Jan 19 10:32:30 2024
+  timeStart: Fri Jan 19 12:20:36 2024
+  timeFinish: Fri Jan 19 13:38:16 2024
+  timeWait: 108 mins
+  timeBuild: 77 mins
+  timeTotal: 185 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705683830
+  taskId: 58226133
+  timeCreate: Fri Jan 19 12:03:50 2024
+  timeStart: Fri Jan 19 13:31:10 2024
+  timeFinish: Fri Jan 19 14:52:44 2024
+  timeWait: 87 mins
+  timeBuild: 81 mins
+  timeTotal: 168 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705693787
+  taskId: 58229902
+  timeCreate: Fri Jan 19 14:49:47 2024
+  timeStart: Fri Jan 19 15:26:37 2024
+  timeFinish: Fri Jan 19 16:47:25 2024
+  timeWait: 36 mins
+  timeBuild: 80 mins
+  timeTotal: 117 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705705191
+  taskId: 58233452
+  timeCreate: Fri Jan 19 17:59:51 2024
+  timeStart: Fri Jan 19 19:03:05 2024
+  timeFinish: Fri Jan 19 20:32:33 2024
+  timeWait: 63 mins
+  timeBuild: 89 mins
+  timeTotal: 152 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705712706
+  taskId: 58235783
+  timeCreate: Fri Jan 19 20:05:06 2024
+  timeStart: Fri Jan 19 20:11:57 2024
+  timeFinish: Fri Jan 19 21:25:06 2024
+  timeWait: 6 mins
+  timeBuild: 73 mins
+  timeTotal: 80 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705713590
+  taskId: 58236115
+  timeCreate: Fri Jan 19 20:19:50 2024
+  timeStart: Fri Jan 19 20:34:07 2024
+  timeFinish: Fri Jan 19 21:53:49 2024
+  timeWait: 14 mins
+  timeBuild: 79 mins
+  timeTotal: 93 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705717679
+  taskId: 58237728
+  timeCreate: Fri Jan 19 21:27:59 2024
+  timeStart: Fri Jan 19 21:33:59 2024
+  timeFinish: Fri Jan 19 22:43:12 2024
+  timeWait: 6 mins
+  timeBuild: 69 mins
+  timeTotal: 75 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705722224
+  taskId: 58238392
+  timeCreate: Fri Jan 19 22:43:44 2024
+  timeStart: Fri Jan 19 22:44:07 2024
+  timeFinish: Fri Jan 19 23:55:12 2024
+  timeWait: 0 mins
+  timeBuild: 71 mins
+  timeTotal: 71 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705754677
+  taskId: 58245112
+  timeCreate: Sat Jan 20 07:44:38 2024
+  timeStart: Sat Jan 20 07:45:04 2024
+  timeFinish: Sat Jan 20 09:06:13 2024
+  timeWait: 0 mins
+  timeBuild: 81 mins
+  timeTotal: 81 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705759511
+  taskId: 58245392
+  timeCreate: Sat Jan 20 09:05:11 2024
+  timeStart: Sat Jan 20 09:05:23 2024
+  timeFinish: Sat Jan 20 10:05:10 2024
+  timeWait: 0 mins
+  timeBuild: 59 mins
+  timeTotal: 59 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705764933
+  taskId: 58245584
+  timeCreate: Sat Jan 20 10:35:33 2024
+  timeStart: Sat Jan 20 10:35:41 2024
+  timeFinish: Sat Jan 20 11:42:39 2024
+  timeWait: 0 mins
+  timeBuild: 66 mins
+  timeTotal: 67 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705768869
+  taskId: 58245749
+  timeCreate: Sat Jan 20 11:41:10 2024
+  timeStart: Sat Jan 20 11:41:19 2024
+  timeFinish: Sat Jan 20 12:45:14 2024
+  timeWait: 0 mins
+  timeBuild: 63 mins
+  timeTotal: 64 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705772752
+  taskId: 58246045
+  timeCreate: Sat Jan 20 12:45:52 2024
+  timeStart: Sat Jan 20 12:45:54 2024
+  timeFinish: Sat Jan 20 13:41:06 2024
+  timeWait: 0 mins
+  timeBuild: 55 mins
+  timeTotal: 55 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705776893
+  taskId: 58246258
+  timeCreate: Sat Jan 20 13:54:54 2024
+  timeStart: Sat Jan 20 13:55:25 2024
+  timeFinish: Sat Jan 20 15:06:30 2024
+  timeWait: 0 mins
+  timeBuild: 71 mins
+  timeTotal: 71 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705781122
+  taskId: 58246437
+  timeCreate: Sat Jan 20 15:05:22 2024
+  timeStart: Sat Jan 20 15:05:48 2024
+  timeFinish: Sat Jan 20 16:00:23 2024
+  timeWait: 0 mins
+  timeBuild: 54 mins
+  timeTotal: 55 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705784940
+  taskId: 58246581
+  timeCreate: Sat Jan 20 16:09:00 2024
+  timeStart: Sat Jan 20 16:09:06 2024
+  timeFinish: Sat Jan 20 17:11:37 2024
+  timeWait: 0 mins
+  timeBuild: 62 mins
+  timeTotal: 62 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705788618
+  taskId: 58246775
+  timeCreate: Sat Jan 20 17:10:19 2024
+  timeStart: Sat Jan 20 17:10:23 2024
+  timeFinish: Sat Jan 20 18:25:59 2024
+  timeWait: 0 mins
+  timeBuild: 75 mins
+  timeTotal: 75 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705796049
+  taskId: 58247347
+  timeCreate: Sat Jan 20 19:14:09 2024
+  timeStart: Sat Jan 20 19:14:12 2024
+  timeFinish: Sat Jan 20 20:20:48 2024
+  timeWait: 0 mins
+  timeBuild: 66 mins
+  timeTotal: 66 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705799780
+  taskId: 58247565
+  timeCreate: Sat Jan 20 20:16:20 2024
+  timeStart: Sat Jan 20 20:17:01 2024
+  timeFinish: Sat Jan 20 21:13:53 2024
+  timeWait: 0 mins
+  timeBuild: 56 mins
+  timeTotal: 57 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705803866
+  taskId: 58247925
+  timeCreate: Sat Jan 20 21:24:26 2024
+  timeStart: Sat Jan 20 21:24:37 2024
+  timeFinish: Sat Jan 20 22:26:56 2024
+  timeWait: 0 mins
+  timeBuild: 62 mins
+  timeTotal: 62 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705807835
+  taskId: 58248185
+  timeCreate: Sat Jan 20 22:30:35 2024
+  timeStart: Sat Jan 20 22:31:05 2024
+  timeFinish: Sat Jan 20 23:27:27 2024
+  timeWait: 0 mins
+  timeBuild: 56 mins
+  timeTotal: 56 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705811840
+  taskId: 58248599
+  timeCreate: Sat Jan 20 23:37:20 2024
+  timeStart: Sat Jan 20 23:37:50 2024
+  timeFinish: Sun Jan 21 00:40:47 2024
+  timeWait: 0 mins
+  timeBuild: 62 mins
+  timeTotal: 63 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705815783
+  taskId: 58248763
+  timeCreate: Sun Jan 21 00:43:03 2024
+  timeStart: Sun Jan 21 00:43:28 2024
+  timeFinish: Sun Jan 21 02:01:32 2024
+  timeWait: 0 mins
+  timeBuild: 78 mins
+  timeTotal: 78 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705820020
+  taskId: 58249112
+  timeCreate: Sun Jan 21 01:53:40 2024
+  timeStart: Sun Jan 21 02:13:22 2024
+  timeFinish: Sun Jan 21 03:20:03 2024
+  timeWait: 19 mins
+  timeBuild: 66 mins
+  timeTotal: 86 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705825539
+  taskId: 58249490
+  timeCreate: Sun Jan 21 03:25:39 2024
+  timeStart: Sun Jan 21 03:25:49 2024
+  timeFinish: Sun Jan 21 04:29:34 2024
+  timeWait: 0 mins
+  timeBuild: 63 mins
+  timeTotal: 63 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705829477
+  taskId: 58249704
+  timeCreate: Sun Jan 21 04:31:17 2024
+  timeStart: Sun Jan 21 04:31:48 2024
+  timeFinish: Sun Jan 21 05:27:42 2024
+  timeWait: 0 mins
+  timeBuild: 55 mins
+  timeTotal: 56 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705833400
+  taskId: 58249931
+  timeCreate: Sun Jan 21 05:36:40 2024
+  timeStart: Sun Jan 21 05:37:22 2024
+  timeFinish: Sun Jan 21 06:37:12 2024
+  timeWait: 0 mins
+  timeBuild: 59 mins
+  timeTotal: 60 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705837285
+  taskId: 58250110
+  timeCreate: Sun Jan 21 06:41:25 2024
+  timeStart: Sun Jan 21 06:41:42 2024
+  timeFinish: Sun Jan 21 07:44:18 2024
+  timeWait: 0 mins
+  timeBuild: 62 mins
+  timeTotal: 62 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705845416
+  taskId: 58250524
+  timeCreate: Sun Jan 21 08:56:57 2024
+  timeStart: Sun Jan 21 08:56:59 2024
+  timeFinish: Sun Jan 21 09:58:04 2024
+  timeWait: 0 mins
+  timeBuild: 61 mins
+  timeTotal: 61 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705849048
+  taskId: 58251096
+  timeCreate: Sun Jan 21 09:57:28 2024
+  timeStart: Sun Jan 21 09:58:14 2024
+  timeFinish: Sun Jan 21 11:00:43 2024
+  timeWait: 0 mins
+  timeBuild: 62 mins
+  timeTotal: 63 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705853057
+  taskId: 58251285
+  timeCreate: Sun Jan 21 11:04:18 2024
+  timeStart: Sun Jan 21 11:04:45 2024
+  timeFinish: Sun Jan 21 12:06:21 2024
+  timeWait: 0 mins
+  timeBuild: 61 mins
+  timeTotal: 62 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705856792
+  taskId: 58251521
+  timeCreate: Sun Jan 21 12:06:33 2024
+  timeStart: Sun Jan 21 12:06:49 2024
+  timeFinish: Sun Jan 21 13:04:10 2024
+  timeWait: 0 mins
+  timeBuild: 57 mins
+  timeTotal: 57 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705860837
+  taskId: 58251664
+  timeCreate: Sun Jan 21 13:13:57 2024
+  timeStart: Sun Jan 21 13:14:43 2024
+  timeFinish: Sun Jan 21 14:11:35 2024
+  timeWait: 0 mins
+  timeBuild: 56 mins
+  timeTotal: 57 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705864603
+  taskId: 58251879
+  timeCreate: Sun Jan 21 14:16:44 2024
+  timeStart: Sun Jan 21 14:16:59 2024
+  timeFinish: Sun Jan 21 15:20:16 2024
+  timeWait: 0 mins
+  timeBuild: 63 mins
+  timeTotal: 63 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705866522
+  taskId: 58251946
+  timeCreate: Sun Jan 21 14:48:42 2024
+  timeStart: Sun Jan 21 14:49:07 2024
+  timeFinish: Sun Jan 21 15:45:36 2024
+  timeWait: 0 mins
+  timeBuild: 56 mins
+  timeTotal: 56 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705868835
+  taskId: 58252055
+  timeCreate: Sun Jan 21 15:27:16 2024
+  timeStart: Sun Jan 21 15:27:26 2024
+  timeFinish: Sun Jan 21 16:25:06 2024
+  timeWait: 0 mins
+  timeBuild: 57 mins
+  timeTotal: 57 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705872948
+  taskId: 58252212
+  timeCreate: Sun Jan 21 16:35:48 2024
+  timeStart: Sun Jan 21 16:36:12 2024
+  timeFinish: Sun Jan 21 17:35:26 2024
+  timeWait: 0 mins
+  timeBuild: 59 mins
+  timeTotal: 59 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705876895
+  taskId: 58252388
+  timeCreate: Sun Jan 21 17:41:35 2024
+  timeStart: Sun Jan 21 17:41:49 2024
+  timeFinish: Sun Jan 21 18:44:40 2024
+  timeWait: 0 mins
+  timeBuild: 62 mins
+  timeTotal: 63 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705880928
+  taskId: 58252735
+  timeCreate: Sun Jan 21 18:48:48 2024
+  timeStart: Sun Jan 21 18:49:02 2024
+  timeFinish: Sun Jan 21 19:47:00 2024
+  timeWait: 0 mins
+  timeBuild: 57 mins
+  timeTotal: 58 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705884753
+  taskId: 58252985
+  timeCreate: Sun Jan 21 19:52:33 2024
+  timeStart: Sun Jan 21 19:52:44 2024
+  timeFinish: Sun Jan 21 20:56:14 2024
+  timeWait: 0 mins
+  timeBuild: 63 mins
+  timeTotal: 63 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705893509
+  taskId: 58255534
+  timeCreate: Sun Jan 21 22:18:30 2024
+  timeStart: Sun Jan 21 22:18:44 2024
+  timeFinish: Sun Jan 21 23:19:05 2024
+  timeWait: 0 mins
+  timeBuild: 60 mins
+  timeTotal: 60 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705897996
+  taskId: 58256571
+  timeCreate: Sun Jan 21 23:33:16 2024
+  timeStart: Sun Jan 21 23:33:31 2024
+  timeFinish: Mon Jan 22 00:43:27 2024
+  timeWait: 0 mins
+  timeBuild: 69 mins
+  timeTotal: 70 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705904666
+  taskId: 58256920
+  timeCreate: Mon Jan 22 01:24:26 2024
+  timeStart: Mon Jan 22 01:24:35 2024
+  timeFinish: Mon Jan 22 02:33:13 2024
+  timeWait: 0 mins
+  timeBuild: 68 mins
+  timeTotal: 68 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705904686
+  taskId: 58256921
+  timeCreate: Mon Jan 22 01:24:46 2024
+  timeStart: Mon Jan 22 01:25:21 2024
+  timeFinish: Mon Jan 22 02:32:19 2024
+  timeWait: 0 mins
+  timeBuild: 66 mins
+  timeTotal: 67 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705905906
+  taskId: 58256969
+  timeCreate: Mon Jan 22 01:45:07 2024
+  timeStart: Mon Jan 22 01:45:13 2024
+  timeFinish: Mon Jan 22 03:02:50 2024
+  timeWait: 0 mins
+  timeBuild: 77 mins
+  timeTotal: 77 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705905925
+  taskId: 58256970
+  timeCreate: Mon Jan 22 01:45:25 2024
+  timeStart: Mon Jan 22 01:46:00 2024
+  timeFinish: Mon Jan 22 03:03:38 2024
+  timeWait: 0 mins
+  timeBuild: 77 mins
+  timeTotal: 78 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705905979
+  taskId: 58256979
+  timeCreate: Mon Jan 22 01:46:19 2024
+  timeStart: Mon Jan 22 01:46:49 2024
+  timeFinish: Mon Jan 22 02:45:54 2024
+  timeWait: 0 mins
+  timeBuild: 59 mins
+  timeTotal: 59 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705905999
+  taskId: 58256982
+  timeCreate: Mon Jan 22 01:46:39 2024
+  timeStart: Mon Jan 22 01:46:50 2024
+  timeFinish: Mon Jan 22 03:03:33 2024
+  timeWait: 0 mins
+  timeBuild: 76 mins
+  timeTotal: 76 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705906071
+  taskId: 58257000
+  timeCreate: Mon Jan 22 01:47:51 2024
+  timeStart: Mon Jan 22 01:48:24 2024
+  timeFinish: Mon Jan 22 02:54:41 2024
+  timeWait: 0 mins
+  timeBuild: 66 mins
+  timeTotal: 66 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-14.1705906091
+  taskId: 58257002
+  timeCreate: Mon Jan 22 01:48:11 2024
+  timeStart: Mon Jan 22 01:48:25 2024
+  timeFinish: Mon Jan 22 03:10:34 2024
+  timeWait: 0 mins
+  timeBuild: 82 mins
+  timeTotal: 82 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-53
+  taskId: 58356644
+  timeCreate: Wed Jan 24 10:39:11 2024
+  timeStart: Wed Jan 24 11:18:52 2024
+  timeFinish: Wed Jan 24 13:11:06 2024
+  timeWait: 39 mins
+  timeBuild: 112 mins
+  timeTotal: 151 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-186
+  taskId: 58363164
+  timeCreate: Wed Jan 24 13:28:38 2024
+  timeStart: Wed Jan 24 13:29:16 2024
+  timeFinish: Wed Jan 24 13:33:28 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
