--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9052,3 +9052,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-64
+  taskId: 58372582
+  timeCreate: Wed Jan 24 22:37:28 2024
+  timeStart: Wed Jan 24 22:37:53 2024
+  timeFinish: Wed Jan 24 22:46:32 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-131
+  taskId: 58372764
+  timeCreate: Wed Jan 24 22:54:49 2024
+  timeStart: Wed Jan 24 22:55:03 2024
+  timeFinish: Wed Jan 24 22:58:46 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
